# lem_in

./: CMakeLists.txt  Makefile  author  lem-in  lem-in_fox  lem_in  lem_in.h  lem_in.h.gch  main.c  map  map.c  map2  map5  solution.c  test_map  vizualizer
lem_in.dSYM/Contents/Resources/DWARF/: lem_in
libft/: Makefile  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_fast_bin_pow.c  ft_fast_bit_pow.c  ft_gcd.c  ft_get_next_line.c  ft_is_prime.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  (+29 more)
maps/: map1  map2  map3  map4  map5  map6  map7
mlx/: mlx_loop.c
solution/: auxiliary.c  calculate_turns.c  delete_deadlocks.c  dijkstra.c  find_new_paths.c  find_overlapping_ways.c  find_way.c  line_breaker.c  print_solution.c  sets.c  sets_basic.c  shortest_way.c  solution.c  solution_main.c  use_shortest.c  ways.c
validation/: check_parts.c  define.c  find.c  free.c  make_links.c  make_map.c  read_and_save.c  solution.c  validation.c
viz/: ant_image.c  bresenham.c  draw.c  draw_line.c  init.c  keyboard.c  move.c  positions.c  vizualizer.h  vizualizer.h.gch  vizualizer_main.c  wu.c
